add log and update more mail functionalities